# controlling-controllability

./: .env.example  .gitignore  CONSTRAINTS.md  PIPELINE.md  README.md  SETUP.md  build_pairs.py  constraints.py  cot_judge.py  make_sft_data.py  openai_utils.py  pyproject.toml  qwen_rollouts.py  requirements-train.txt  run_all.sh  run_evade.sh  run_experiment.sh  run_faith_monitor.sh  run_finetune.sh  run_heldout.sh  run_rollouts.sh  seed_datasets.py  train.sh  train_sft.py  workspace_env.sh
cotctrl/: analyze.py  build_pairs.py  cot_judge.py  merge_lora.py  train_sft.py
cotctrl/eval/: cotcontrol_local.py  hint_rollouts.py  hint_score.py
data/: hint.base.evade.jsonl  hint.base.evade.scored.jsonl  hint.base.jsonl  hint.base.scored.jsonl  hint.ft.evade.jsonl  hint.ft.evade.scored.jsonl  hint.ft.jsonl  hint.ft.scored.jsonl  judged.heldout.ft.jsonl  judged.test.ft.jsonl  judged.test.jsonl  judged.val.ft.jsonl  judged.val.jsonl  sft.train.jsonl
docs/: CONSTRAINTS.md  EXPERIMENT_4B.md  PIPELINE.md  SETUP.md  eval.md
eval/: README_eval.md  check_grader_agreement.py  cotcontrol_local.py  serve_qwen.sh
notebooks/: plots_4b.ipynb
