[project]
name = "controlling-controllability"
version = "0.1.0"
description = "Fine-tuning Qwen3 reasoning models to follow verifiable chain-of-thought constraints, and measuring CoT controllability / faithfulness / monitorability."
requires-python = ">=3.10,<3.13"
dependencies = [
    "transformers>=4.51.0",   # Qwen3 support
    "datasets>=2.19.0",
    "openai>=1.40.0",         # gpt-4.1-mini judge + rewriter
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",       # CoT-Control harness (llm.py)
    "aiohttp>=3.9.0",         # CoT-Control harness (async)
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# generation / serving (vLLM bundles a compatible torch on CUDA Linux)
gen = ["vllm>=0.8.5"]
# SFT training
train = ["trl==0.13.0", "peft>=0.13.0", "accelerate>=0.34.0"]

[tool.uv]
package = false   # flat scripts run via `uv run python x.py`; nothing to build/install
